--- a/flux.yaml
+++ b/flux.yaml
@@ -110,8 +110,8 @@ items:
         containers:
         - args:
           - --ssh-keygen-dir=/var/fluxd/keygen
-          - --git-url=https://github.com/weaveworks/wks-quickstart-firekube.git
-          - --git-branch=master
+          - --git-url=git@github.com:kingdonb/wks-quickstart-firekube.git
+          - --git-branch=january-3
           - --git-poll-interval=30s
           - --git-path=.
           - --git-readonly
