--- a/wks-controller.yaml
+++ b/wks-controller.yaml
@@ -42,7 +42,12 @@ spec:
         operator: Exists
       containers:
       - name: controller
-        image: quay.io/wksctl/controller:latest
+        env:
+        - name: FOOTLOOSE_SERVER_ADDR
+          value: 172.17.0.1
+        - name: FOOTLOOSE_BACKEND
+          value: docker
+        image: quay.io/kingdonb/controller:0.8.2-alpha.3-4-ga49edd2
         command:
         - /bin/controller
         - --verbose
