--- a/wks-controller.yaml
+++ b/wks-controller.yaml
@@ -47,7 +47,7 @@ spec:
           value: 172.17.0.1
         - name: FOOTLOOSE_BACKEND
           value: docker
-        image: quay.io/kingdonb/controller:0.8.2-alpha.3-4-ga49edd2
+        image: quay.io/kingdonb/controller:0.8.2-alpha.3-6-gd9dbb36
         command:
         - /bin/controller
         - --verbose
