building my own wksctl for 1.14.10
Should be possible to start wks-quickstart-firekube with 1.14.10 using
this version of wksctl

--- a/wks-controller.yaml
+++ b/wks-controller.yaml
@@ -42,7 +42,7 @@ spec:
         operator: Exists
       containers:
       - name: controller
-        image: quay.io/wksctl/controller:latest
+        image: quay.io/kingdonb/controller:latest
         command:
         - /bin/controller
         - --verbose
