--- a/footloose.yaml
+++ b/footloose.yaml
@@ -21,6 +21,10 @@ machines:
       hostPort: 30443
     - containerPort: 30080
       hostPort: 30080
+    - containerPort: 80
+      hostPort: 8080
+    - containerPort: 443
+      hostPort: 8443
     privileged: true
     volumes:
     - destination: /var/lib/docker
