--- a/machines.yaml
+++ b/machines.yaml
@@ -40,4 +40,24 @@ items:
           port: 2223
     versions:
       kubelet: 1.14.10
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-1
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 172.17.0.4
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2224
+    versions:
+      kubelet: 1.14.10
 kind: List
