--- a/docker-config.yaml
+++ b/docker-config.yaml
@@ -10,6 +10,9 @@ data:
       "log-opts": {
         "max-size": "100m"
       },
+      "insecure-registries": [
+        "172.25.0.4:5000"
+      ],
       "exec-opts": [
         "native.cgroupdriver=cgroupfs"
       ]
