--- a/docker-config.yaml
+++ b/docker-config.yaml
@@ -10,6 +10,11 @@ data:
       "log-opts": {
         "max-size": "100m"
       },
+      "insecure-registries": [
+        "172.25.0.2:5000",
+        "registry.default.svc:5000",
+        "netmoom.nerdland.local:4999"
+      ],
       "exec-opts": [
         "native.cgroupdriver=cgroupfs"
       ]
