set registry to local network (externally hosted)
fileserver hosted on my local network with a RAID-style disk array

--- a/cluster.yaml
+++ b/cluster.yaml
@@ -11,7 +11,7 @@ spec:
     serviceDomain: cluster.local
   providerSpec:
     value:
-      imageRepository: 172.25.0.2:5000
+      imageRepository: netmoom.nerdland.local:4999
       apiVersion: baremetalproviderspec/v1alpha1
       kind: BareMetalClusterProviderSpec
       user: root
