--- a/wks-controller.yaml
+++ b/wks-controller.yaml
@@ -42,7 +42,7 @@ spec:
         operator: Exists
       containers:
       - name: controller
-        image: quay.io/wksctl/controller:0.8.1
+        image: netmoom.nerdland.local:4999/wksctl/controller:master-3620b63d
         command:
         - /bin/controller
         - --verbose
