--- a/wks-controller.yaml
+++ b/wks-controller.yaml
@@ -42,6 +42,11 @@ spec:
         operator: Exists
       containers:
       - name: controller
+        env:
+        - name: FOOTLOOSE_SERVER_ADDR
+          value: 172.17.0.1
+        - name: FOOTLOOSE_BACKEND
+          value: docker
         image: netmoom.nerdland.local:4999/wksctl/controller:0.8.2-alpha.4
         command:
         - /bin/controller
